--- a/etc/drcom.conf
+++ b/etc/drcom.conf
@@ -1,10 +1,10 @@
 
-server = "192.168.9.6"
+server = "1.1.1.1"
 username = ""
 password = ""
-host_name = "hp"
-host_os = "win7"
-host_ip = "10.7.1.1"
+host_name = "Linux"
+host_os = "Arch"
+host_ip = "10.1.1.1"
 dhcp_server = "0.0.0.0"
 mac = 0xc860004ad621
 sys_pass = "123456"
